// $Id: CHANGELOG.txt,v 1.276 2008/08/25 07:51:52 dries Exp $

Drupal 7.0, xxxx-xx-xx (development version)
----------------------
- Database:
    * Fully rewritten database layer utilizing PHP 5's PDO abstraction layer.
    * Added query builders for INSERT, UPDATE, DELETE, MERGE, and SELECT queries.
    * Support for master/slave replication, transactions, multi-insert queries,
      delayed inserts, and other features.
- Security:
    * Protected cron.php -- cron will only run if the proper key is provided.
    * Implemented much stronger password hashes that are also compatible with the
      Portable PHP password hashing framework.
    * Implemented a pluggable password hashing API supporting alternative
      hashing and authentication schemes.
- Usability:
    * Implemented drag-and-drop positioning for input format listings.
    * Implemented drag-and-drop positioning for poll options.
    * Provided descriptions for user permissions.
    * Removed comment controls for users.
    * Removed display order settings for comment module. Comment display
      order can now be customised using the Views module.
    * Added additional features to the default install profile, and implemented
      a "slimmed down" install profile designed for developers.
    * Image toolkits are now provided by modules (rather than requiring a manual
      file copy to the includes directory).
- News aggregator:
    * Added OPML import functionality for RSS feeds.
    * Optionally, RSS feeds may be configured to not automatically generate feed blocks.
- Search:
    * Added support for language-aware searches.
- Testing:
    * Added test framework and tests.
- Removed ping module:
    * Contributed modules with similar functionality are available.
- Refactored the "access rules" component of user module:
    * The user module now provides a simple interface for blocking single
      IP addresses. The previous functionality in the user module for restricting